# TensorBox

./: README.md  evaluate.py  train.py
utils/: CMakeLists.txt  data_utils.py  googlenet_load.py  stitch_wrapper.cpp  stitch_wrapper.pyd  train_utils.py
utils/annolist/: AnnotationLib.py  PalLib.py
